--- a/app/assets/stylesheets/teams.css.scss
+++ b/app/assets/stylesheets/teams.css.scss
@@ -6,40 +6,100 @@
 	position:absolute;
 	height:30px;
 	width:60%;
+	left:240px;
 	background-color:#F5F5F5;
 	color:black;
 	font-size:16px;
 }
 
-.searchbackground{
-	height:0px;
-	background-color:white;
-}
-
-.buttonsubmit{
-	position:relative;
-	left:200px;
-}
-
 .line1{
-	position:relative;
-	top:100px;
-	height:1px;
+	position:absolute;
+	top:160px;
+	left:0px;
+	width:100%;
+	height:2px;
 	background-color:#F5F5F5;
 }
 
 .results{
-	margin-top:140px;
+	position:absolute;
+	margin-top:100px;
+	margin-right:300px;
 	padding:20px;
+	left:0px;
 }
 
 .eachresult{
 	margin:10px;
 	float:left;
-	border:1px solid #72B7ED;
 	padding:20px;
 	background-color:#F5F5F5;
 	-moz-box-shadow: 0 0 5px #888;
 	-webkit-box-shadow: 0 0 5px#888;
-	box-shadow: 0 0 2px #888;
+	box-shadow: 0 0 3px #888;
 }
+
+.bar{
+	font-family:CollegiateInsideFLF;
+	text-align:center;
+	top:-20px;
+	position:relative;
+	display:inline;
+}
+
+.baraddress{
+	position:relative;
+	top:-20px;
+	display:inline;
+}
+
+.title{
+	padding:20px;
+	position:relative;
+	font-size:50px;
+	text-align:center;
+	font-family:CollegiateHeavyOutline;
+	color:#982B41;
+}
+
+.fb-like{
+	position:relative;
+	left:560px;
+}	
+
+.sidebar{
+	position:absolute;
+	left:900px;
+	top:162px;
+	width:20%;
+	height:100%;
+	background-color:white;
+}
+
+.sidebarcontent{
+	text-align:center;
+}
+
+.resultsmessage1{
+	color:red;
+	font-size:20px;
+	margin-right:50px;
+	font-family:CollegiateInsideFLF;
+}
+
+.resultsmessage2{
+	text-align:center;
+	font-size:20px;
+	font-family:CollegiateInsideFLF;
+}
+
+.footbar{
+   text-align:right;
+   position:fixed;
+   left:0px;
+   bottom:0px;
+   height:30px;
+   width:100%;
+   background:#F5F5F5;
+}
+
