--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,25 +1,56 @@
+
+<div class="title">
+<%= link_to 'HomeTeamBar.com', root_path %>
+</div>
+
+<div class="fb-like" data-href="https://www.facebook.com/pages/HomeTeamBarcom/132253690255919" data-send="true" data-layout="button_count" data-width="450" data-show-faces="true" data-font="lucida grande"></div>
+
 <div class="searchbackground">
 <%= search_form_for @search do |f| %>
-<div class="span6 offset2">
-  <%= f.text_field :name_cont, :class=> "search", :placeholder => "What sports team are you looking for?" %>
-</div>
+<%= f.text_field :name_cont, :class=> "search", :placeholder => "What sports team are you looking for?" %>
+</div>  
 <% end %>
+
 
 <div class="line1">
 </div>
 
-</div>  
+<div class="results"> 
+<% if @search.result.blank? %>	
+<div class="resultsmessage1">
+"Boo! your search came up empty. We are always looking for bars to add to our database. If you know one, please shoot us an
+<%= mail_to "hometeambar@gmail.com", "email.", :subject => "Hey I know of this bar..." %>"
 
-<div class="results">
-		
-<% if params[:q].present?%>
+</div>
+<% else %>
+<% if params[:q].present? %>
+<div class="resultsmessage2">
+Sweet! We found <%= pluralize(@search.result.count, 'bar') + "!" %> 
+</div>
+<br>
 <% @teams.each do |team| %>
 <div class="eachresult"><br>
+	<div class="bar">
 <b><%= team.venue.name %></b><br>
-<%= team.venue.address%><br><br>
 </div>
+<div class="baraddress">
+<%= team.venue.address%><br>
+<%=link_to 'Get Directions', "https://maps.google.com/?q=#{team.venue.name + " " + team.venue.address}"%>
+</div> 
+</div>
+<% end %>
 <% end %>
 <% end %>
 </div>
 
+<div class="sidebar">
+	<div class="sidebarcontent">
+		<a class="twitter-timeline" href="https://twitter.com/HomeTeamBar" data-widget-id="261592154726612993">Tweets by @HomeTeamBar</a>
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+		
+	</div>
+</div>
 
+<div class="footbar">
+	  <right><%= mail_to "hometeambar@gmail.com", "Questions?", :subject => "I have a question" %> - Made in NYC - HomeTeamBar © </right>
+	</div>
