--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -47,10 +47,9 @@ Sweet! We found <%= pluralize(@search.result.count, 'bar') + "!" %>
 	<div class="sidebarcontent">
 		<a class="twitter-timeline" href="https://twitter.com/HomeTeamBar" data-widget-id="261592154726612993">Tweets by @HomeTeamBar</a>
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-		
 	</div>
 </div>
 
 <div class="footbar">
-	  <right><%= mail_to "hometeambar@gmail.com", "Questions?", :subject => "I have a question" %> - Made in NYC - HomeTeamBar © </right>
+	  <right> | in Beta - currently NYC only | HomeTeamBar © | <%= mail_to "hometeambar@gmail.com", "Questions?", :subject => "I have a question" %> | </right>
 	</div>
