--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -31,7 +31,7 @@ Sweet! We found <%= pluralize(@search.result.count, 'bar') + "!" %>
 <% @teams.each do |team| %>
 <div class="eachresult"><br>
 <div class="bar">
-   Root for <%= team.name %><br> at
+   Root for the <%= team.name %><br> at
 <b><%= team.venue.name %></b><br>
 </div>
 <div class="baraddress">
