--- a/app/assets/stylesheets/teams.css.scss
+++ b/app/assets/stylesheets/teams.css.scss
@@ -24,8 +24,8 @@
 .results{
 	position:absolute;
 	margin-top:90px;
-	margin-right:350px;
 	padding:20px;
+	width:65%;
 	left:0px;
 }
 
@@ -72,7 +72,7 @@
 .sidebar{
 	position:absolute;
 	margin-left:40px;
-	left:900px;
+	left:800px;
 	top:161px;
 	width:30%;
 	height:100%;
