--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,11 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="assets/css/bootstrap-responsive.css" rel="stylesheet" media="screen">
 
 </head>
 <body>
-
-<div id="wrapper">
 	<div id="fb-root"></div>
 	<script>(function(d, s, id) {
 	  var js, fjs = d.getElementsByTagName(s)[0];
@@ -20,7 +20,7 @@
 	}(document, 'script', 'facebook-jssdk'));</script>
 	
 <%= yield %>
-</div>
+
 <script 
  src="http://twitterjs.googlecode.com/svn/trunk/src/twitter.min.js" 
  type="text/javascript">
