--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -5,10 +5,9 @@
 			<ul class="nav nav-list">
 				<ul class="nav nav-list">
 				  <li class="active"><a href="http://hometeambar.com">Home</a></li>
-				  <li><a href="https://twitter.com/HomeTeamBar">Know a bar?</a></li>
-				  <li><a href="https://twitter.com/HomeTeamBar">Our Twitter</a></li>
-				<li><a href="https://twitter.com/HomeTeamBar">Our Facebook</a></li>
-				<li><a href="https://twitter.com/HomeTeamBar">Contact us</a></li>
+				  <li><a href="https://twitter.com/HomeTeamBar">On Twitter</a></li>
+				<li><a href="https://www.facebook.com/pages/HomeTeamBarcom/132253690255919">On Facebook</a></li>
+				<li><a href="mailto:hometeambar@gmail.com">Know a bar?</a></li>
 			</ul>
 	 </div>
 	
@@ -16,7 +15,7 @@
 <div class="topbar">
 <h1>
 <div class="title">
-HomeTeamBar.com
+HomeTeamB<i class="icon-search"></i>r
 </div>
 </h1>
 
@@ -60,8 +59,10 @@ HomeTeamBar.com
 <% end %>
 </div>
 
+<div class="beta">
+Beta - NYC only | HomeTeamBar Copyright 2012 ©
 </div>
 
-
-	</div>
+</div>
+</div>	
 </div>
